--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
         <div class="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pexels.com%2Fsearch%2Ffood%2F&psig=AOvVaw1SOjTdTDr43CaZXsncVdMu&ust=1705575094376000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCOi-psCg5IMDFQAAAAAdAAAAABAf" alt="Image 1">
+                    <img src="/git-collab/img1.jpg" alt="Image 1">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.cypressgreen.in%2Fblog%2Ffood-you-must-eat-in-pune%2F&psig=AOvVaw1SOjTdTDr43CaZXsncVdMu&ust=1705575094376000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCOi-psCg5IMDFQAAAAAdAAAAABAn" alt="Image 2">
+                    <img src="/git-collab/img2.jpg" alt="Image 2">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pexels.com%2Fphoto%2Fcooked-dish-serve-on-black-tray-958547%2F&psig=AOvVaw1SOjTdTDr43CaZXsncVdMu&ust=1705575094376000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCOi-psCg5IMDFQAAAAAdAAAAABA2" alt="Image 3">
+                    <img src="/git-collab/img3.jpeg" alt="Image 3">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pexels.com%2Fphoto%2Fplatter-of-foods-941869%2F&psig=AOvVaw1SOjTdTDr43CaZXsncVdMu&ust=1705575094376000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCOi-psCg5IMDFQAAAAAdAAAAABA-" alt="Image 4">
+                    <img src="/git-collab/img4.jpeg" alt="Image 4">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphoto%2Fclose-up-of-unrecognizable-woman-preparing-lunch-in-the-kitchen-gm1153386183-313226775&psig=AOvVaw1SOjTdTDr43CaZXsncVdMu&ust=1705575094376000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCOi-psCg5IMDFQAAAAAdAAAAABBV" alt="Image 5">
+                    <img src="/git-collab/img5.jpg" alt="Image 5">
                 </div>
             </div>
         </div>
