Added new image

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
     <section class="Fooddd">
         <div class="Caption"><h1>We Have Different Kinds of Dishes</h1>
-        <p class="small_text">You don't have to pick only one</p></div>
-        <div class="imgs"><a href=""><img class="img3" src="./bungwonimage2.jpeg" alt=""></a>
-        <a href=""><img class="img3" src="./bungwonimage4.webp" alt=""></a>
-        <a href=""><img class="img3" src="./bungwonimage6.jpg" alt=""></a></div>
+        <p class="small_text">You don't have to pick only one. We won't tell, pinky promise.</p></div>
+        <div class="imgs"><a href=""><img class="img" src="./bungwonimage2.jpeg" alt=""></a>
+        <a href=""><img class="img" src="./bungwonimage4.webp" alt=""></a>
+        <a href=""><img class="img" src="./bungwonimage6.jpg" alt=""></a>
+    <a href=""><img class="img" src="./bungwonimage7.jpg" alt=""></a></div>
     </section>
 </body>
 </html>
