I changed the entire html and replaced it with another code

--- a/index.html
+++ b/index.html
@@ -7,29 +7,67 @@
     <title>Git Collaboration</title>
 </head>
 <body>
-    <section id="images">
-        <h2>Our Resturant Offers Several Dishes</h2>
-        <div class="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="/git-collab/img1.jpg" alt="Image 1">
-                </div>
-                <div class="carousel-item">
-                    <img src="/git-collab/img2.jpg" alt="Image 2">
-                </div>
-                <div class="carousel-item">
-                    <img src="/git-collab/img3.jpeg" alt="Image 3">
-                </div>
-                <div class="carousel-item">
-                    <img src="/git-collab/img4.jpeg" alt="Image 4">
-                </div>
-                <div class="carousel-item">
-                    <img src="/git-collab/img5.jpg" alt="Image 5">
-                </div>
+  
+    <section class="four-images">
+        <div class="image-container">
+            <img src="/Project1/LG-Resources1/index/images/section2-image1.jpg" alt="Image 1">
+            <div class="text-and-description">
+                <h2>TV & HOME ENTERTAINMENT</h2>
+                <p>Browse all of our TVs, form OLED to LED, and find the right one for you.</p>
+            </div>
+        </div>
+
+        <div class="image-container">
+            <img src="/Project1/LG-Resources1/index/images/section2-image2.jpg" alt="Image 2">
+            <div class="text-and-description">
+                <h2>AUDIO</h2>
+                <p>Find the perfect audion that meets your sound needs.</p>
+            </div>
+        </div>
+
+        <div class="image-container">
+            <img src="/Project1/LG-Resources1/index/images/section2-image3.jpg" alt="Image 3">
+            <div class="text-and-description">
+                <h2>HOME APPLIANCES</h2>
+                <p>Rediscover domestic appliances with innovative products from LG.</p>
+            </div>
+        </div>
+
+        <div class="image-container">
+            <img src="/Project1/LG-Resources1/index/images/section2-image4.jpg" alt="Image 4">
+            <div class="text-and-description">
+                <h2>AIR CONDITIONERS</h2>
+                <p>Checkout our efficient Air conditioners from LG.</p>
             </div>
         </div>
     </section>
 
-    <script src="/git-collab/script.js"></script>
+    <section class="three-images-section">
+        <div class="image-container">
+            <img src="/Project1/LG-Resources1/index/images/section3-image1.jpg" alt="Image 1">
+            <div class="text-and-link">
+                <h2>LG OLED TV - SEAMLESS VIEWING</h2>
+                <a href="#">Learn More</a>
+            </div>
+        </div>
+    
+        <div class="image-container">
+            <img src="/Project1/LG-Resources1/index/images/section3-image2.jpg" alt="Image 2">
+            <div class="text-and-link">
+                <h2>LG INSTAVIEW - KNOCK TWICE SEE INSIDE </h2>
+                <a href="#">Learn More</a>
+            </div>
+        </div>
+    
+        <div class="image-container">
+            <img src="/Project1/LG-Resources1/index/images/section3-image3.jpg" alt="Image 3">
+            <div class="text-and-link">
+                <h2>LG SOUND BAR - THE NEXT STEP IN AUDIO IMMERSION</h2>
+                <p>Description of Product 3.</p>
+                <a href="#">Learn More</a>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
