in added picture and text

--- a/index.html
+++ b/index.html
@@ -3,12 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Git Collaboration</title>
 </head>
-<div>
-    <img src=""
-</div>
+
 <body>
+    <div>
+        <h1>NIGERIA FOODS</h1>
+    </div>
+    <div>
+       <div class="div_menu"> 
+        <img src="food 2 cleture.jpg">
+        <p>Jollof rice is unarguably the most popular Nigerian food.
+             I advise folks that are just starting with Nigerian 
+             cooking to start with jollof rice.</p>
+       
+        <div class="sweet">
+            <img src="food 4 cleture.jpg">
+        <p>Unripe plantain porridge is food to millions of Nigerians. I make this at least once every week in my home.</p>
+        </div>
+    </div>
+    <div>
+    <img src="food 3 cleture.jpg">
+    <img src="food 1 cleture.jpg">
+    </div>
+
     
 </body>
 </html>
