made a drink section

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Git Collaboration</title>
 </head>
 <body>
-    <div>
+    <div class="d1">
+        <header>Drinks World</header>
         <div class="food1">
-            <h4>Unleash the mixologist in you with our guide to the best vodka cocktails. Impress your friends with ...
-                Ingredients </h4>
-        <ul>            
+            <h1>Unleash the mixologist in you with our guide to the best vodka cocktails. Impress your friends with ...
+                 </h1>
+        <ul> 
+            <li class="bold">Ingredients</li>           
             <li>1 Vodka tonic</li>
             <li>1 Bloody mary</li>
             <li>1 Espresso martini</li>
