some changes was made

--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
 </head>
 
 <body>
-    <div>
-        <h1>NIGERIA FOODS</h1>
-    </div>
+</div>
+<div class="list-items">
+    <ul>
+        <li>HOME</li>
+        <li>ABOUT</li>
+        <li>SERVICE</li>
+    </ul>
+</div>
     <div>
        <div class="div_menu"> 
         <img src="food 2 cleture.jpg">
