--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <div class="third">
         <img src="./img/serve.jpg" alt="">
         <h4>No matter the weather condition we are always here to offer you our delicious recipes at affordable rate</h4>
+        <button class="btn">place order</button>
  
     
     </div>
