--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
 <body>
     <section class="four-images">
         <div class="image-container">
-            <img src="/git-collab/img1.jpg" alt="Image 1">
+            <img src="./img1.jpg" alt="Image 1">
             <div class="text-and-description">
                 <h2>DELICIOUS PIZZAS</h2>
                 <p>Indulge in a variety of mouth-watering pizzas, from classic Margherita to exotic toppings.</p>
             </div>
         </div>
         <div class="image-container">
-            <img src="/git-collab/img2.jpg" alt="Image 2">
+            <img src="./img2.jpg" alt="Image 2">
             <div class="text-and-description">
                 <h2>IRRESISTIBLE DESSERTS</h2>
                 <p>Satisfy your sweet tooth with our delectable desserts crafted to perfection.</p>
             </div>
         </div>
         <div class="image-container">
-            <img src="/git-collab/img3.jpeg" alt="Image 3">
+            <img src="./img3.jpeg" alt="Image 3">
             <div class="text-and-description">
                 <h2>FARM-FRESH INGREDIENTS</h2>
                 <p>Experience culinary delight with dishes prepared using the finest farm-fresh ingredients.</p>
             </div>
         </div>   
         <div class="image-container">
-            <img src="/git-collab/img4.jpeg" alt="Image 4">
+            <img src="./img4.jpeg" alt="Image 4">
             <div class="text-and-description">
                 <h2>FLAVORFUL BEVERAGES</h2>
                 <p>Quench your thirst with our refreshing and flavorful beverage selections.</p>
@@ -39,7 +39,7 @@
     </section>   
     <section class="three-images-section">
         <div class="image-container">
-            <img src="/git-collab/img5.jpg" alt="Image 5">
+            <img src="./img5.jpg" alt="Image 5">
             <div class="text-and-link">
                 <h2>EXQUISITE CUISINE EXPERIENCE</h2>
                 <a href="#">Explore Our Menu</a>
@@ -47,7 +47,7 @@
         </div>
     
         <div class="image-container">
-            <img src="/git-collab/img6.jpg" alt="Image 6">
+            <img src="./img6.jpg" alt="Image 6">
             <div class="text-and-link">
                 <h2>CULINARY WORKSHOPS</h2>
                 <a href="#">Join Our Cooking Classes</a>
@@ -55,7 +55,7 @@
         </div>
     
         <div class="image-container">
-            <img src="/git-collab/img7.avif" alt="Image 7">
+            <img src="./img7.avif" alt="Image 7">
             <div class="text-and-link">
                 <h2>GASTRONOMIC DELIGHTS</h2>
                 <p>Immerse yourself in a world of gastronomic delights with our exquisite food offerings.</p>
