Made changes to html

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
           <h2>GASTRONOMIC DELIGHTS</h2>
           <p>Immerse yourself in a world of gastronomic delights with our exquisite food offerings.</p>
           <a href="#">Learn More</a>
+        </div>
+      </div>
+    </section>
     <section>
       <h3 class="heading-text">About</h3>
       <div class="col-2">
