Added footer Section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
       </div>
       <hr />
     </main>
+    <section>
+      <h3 class="heading-text">About</h3>
+      <div class="col-2">
+        <img src="Ben-food-image.jpg" alt="Ben food image" />
+        <div class="col-2-text">
+          <div class="text">Made with pure natural ingredients, and contains all the necessary nutrition needed.</div>
+          <button class="btn">Learn more</button>
+        </div>
+      </div>
+    </section>
     <section class="four-images">
       <div class="image-container">
         <img src="./img1.jpg" alt="Image 1" />
@@ -82,19 +92,6 @@
           <h2>GASTRONOMIC DELIGHTS</h2>
           <p>Immerse yourself in a world of gastronomic delights with our exquisite food offerings.</p>
           <a href="#">Learn More</a>
-        </div>
-      </div>
-    </section>
-    <section>
-      <h3 class="heading-text">About</h3>
-      <div class="col-2">
-        <img src="Ben-food-image.jpg" alt="Ben food image" />
-        <div class="col-2-text">
-          <div class="text">
-            Made with pure natural ingredients, and contains
-            <span>all the necessary nutrition needed.</span>
-          </div>
-          <button class="btn">Learn more</button>
         </div>
       </div>
     </section>
@@ -288,11 +285,14 @@
           <h4>We are reliable, therefore you can count on us for blazingly fast delivery and mouth watering delicacies</h4>
         </div>
       </div>
-      <div class="third">
+      <!-- <div class="third">
         <img src="./img/serve.jpg" alt="" />
         <h4>No matter the weather condition we are always here to offer you our delicious recipes at affordable rate</h4>
         <button class="btn">place order</button>
-      </div>
+      </div> -->
     </section>
+    <footer class="footer">
+      <p>Made with 💗 from Batch 16 Class</p>
+    </footer>
   </body>
 </html>
